Feature/batch insert kol (#3)
* feat: Implemented upload xlsx to batch create KOL information

* feat: add batch creation of Kols from XLSX file

- Implemented BatchCreateKolsByXlsx handler to process XLSX uploads.
- Added validation for XLSX file type in request.
- Updated router to include new endpoint for batch creation.
- Modified Kol repository to handle null values for tags.
- Enhanced use case to support batch creation functionality.

* feat: add API documentation for batch creation of Kols from XLSX

- Introduced new endpoint `/api/v1/kols/upload` for batch creation of Kols via XLSX file upload.
- Updated Swagger documentation to include request and response specifications for the new endpoint.

* feat: enhance email sending functionality with logging

- Improved error handling by logging the error and recipient email on failure.

* chore: update Go version and GitHub Actions setup

- Updated Go version from 1.23.0 to 1.24.0 in go.mod.
- Upgraded GitHub Actions setup-go from v4 to v5.
- Updated actions/cache from v4.1.2 to v4 for caching golangci-lint.

* chore: update dependencies and GolangCI configuration

- Updated Go version from 1.24.0 to 1.24.2 in go.mod.
- Upgraded several dependencies to their latest versions, including gin-contrib/cors, go-playground/validator, golang-jwt/jwt, and others.
- Modified .golangci.yaml to adjust linters and their settings, including enabling additional linters and updating configurations for existing ones.
- Updated GitHub Actions configuration to reflect the new Go version and linter version.

---------
